@@ -93,6 +93,14 @@ class Displayer(object):
     def __init__(self, colored=True):
         self._colored = colored
 
+    def _color(self, text, code):
+        if not self._colored:
+            return text
+
+        return code + text + DEFAULT_COLOR
+
+    def project(self, text):
+        return self._color('p:%s' % text, PROJECT_COLOR)
 
     def priority(self, text, priority):
         # color according to priority
@@ -110,35 +118,29 @@ class Displayer(object):
         @param colored: if True, color the return value for output.
         @param due:     whether to show additional due info.
         """
-        def color(text, code):
-            if not self._colored:
-                return text
-
-            return code + text + DEFAULT_COLOR
-
         blocks = []
 
         if shortid:
-            blocks.append(color('%s' % thing.shortid(), TIME_COLOR))
+            blocks.append(self._color('%s' % thing.shortid(), TIME_COLOR))
             blocks.append(self.priority(
                 '(%.2f)' % thing.priority(), thing.priority()))
 
         blocks.append(thing.title)
 
         if thing.contexts:
-            blocks.extend([color('@%s' % c, CONTEXT_COLOR)
+            blocks.extend([self._color('@%s' % c, CONTEXT_COLOR)
                 for c in thing.contexts]) 
         if thing.projects:
-            blocks.extend([color('p:%s' % p, PROJECT_COLOR)
-                for p in thing.projects]) 
+            blocks.extend([self.project(p) for p in thing.projects]) 
         if thing.statuses:
-            blocks.extend([color('!%s' % s, STATUS_COLOR)
+            blocks.extend([self._color('!%s' % s, STATUS_COLOR)
                  for s in thing.statuses]) 
 
         if thing.urgency is not None:
-            blocks.append(color('U:%d', URGENCY_COLOR) % thing.urgency)
+            blocks.append(self._color('U:%d', URGENCY_COLOR) % thing.urgency)
         if thing.importance is not None:
-            blocks.append(color('I:%d', IMPORTANCE_COLOR) % thing.importance)
+            blocks.append(self._color(
+                'I:%d', IMPORTANCE_COLOR) % thing.importance)
 
         # FIXME: format with H/M/S/...
         def _format_time(seconds):
@@ -157,24 +159,24 @@ class Displayer(object):
                 return '%dM' % (seconds / minute)
 
         if thing.time is not None:
-            blocks.append(color(
+            blocks.append(self._color(
                 'T:%s' % _format_time(thing.time), TIME_COLOR))
         if thing.recurrence is not None:
-            blocks.append(color(
+            blocks.append(self._color(
                 'R:%s' % _format_time(thing.recurrence), RECURRENCE_COLOR))
 
         if thing.start is not None:
-            blocks.append(color(
+            blocks.append(self._color(
                 'S:%s' % thing.start.strftime('%Y-%m-%d'), START_COLOR))
         if thing.due is not None:
-            blocks.append(color(
+            blocks.append(self._color(
                 'D:%s' % thing.due.strftime('%Y-%m-%d'), DUE_COLOR))
         if thing.end is not None:
-            blocks.append(color(
+            blocks.append(self._color(
                 'E:%s' % thing.end.strftime('%Y-%m-%d'), END_COLOR))
 
         if thing.complete:
-            blocks.append(color('C:%s' % thing.complete, COMPLETE_COLOR))
+            blocks.append(self._color('C:%s' % thing.complete, COMPLETE_COLOR))
 
         if due and thing.due:
             blocks.append(_get_deadline_string(thing.due))
